dynamically_typed_tests/invalid/scope/badScopeRedefine.wacc
# variable scoping test that uses a redefined variable incorrectly

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  x = 12 ;
  begin
    x = true ;
    x = 5
  end ;
  exit x 
end

